feat - done all the front end works
all are done

--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -48,7 +48,25 @@
                     </tbody>
                   </table>
             </div>
-            <div class="col-3 p-3" style="border: 1px solid black; border-radius: 5px; position: static;">
+
+            <div class="col-3">
+
+              <select name="month" id="month" style="width:100%; font-size: 18pt; font-weight: 700; text-align: center; border-radius: 5px;" class="p-1 mb-3">
+                <option value="January">January</option>
+                <option value="February">February</option>
+                <option value="March">March</option>
+                <option value="April">April</option>
+                <option value="May">May</option>
+                <option value="June">June</option>
+                <option value="July">July</option>
+                <option value="August">August</option>
+                <option value="September">September</option>
+                <option value="October">October</option>
+                <option value="November">November</option>
+                <option value="December">December</option>
+              </select>                        
+              
+            <div class="p-3" style="border: 1px solid black; border-radius: 5px; position: static;">
 
                 <h5 style="text-align: center;" class="mb-3">Student Details</h5>
                 <form action="" id="stFrm">
@@ -77,6 +95,7 @@
 
                 </form>  
             </div>
+          </div>
         </div>
     </div>
 
